# ODF-Inspector

./: .gitignore  BUILDING.md  CMakeLists.txt  CONTRIBUTING_TO_LIBREOFFICE.md  EXAMPLES.md  README.md
include/: ODFInspector.h  ZipReader.h
src/: ODFInspector.cpp  ZipReader.cpp  gui_main.cpp  main.cpp
